# ASHD

./: .env.example  .gitignore  AGENTS.md  README.md  ashd.db  pyproject.toml  requirements.txt
.github/workflows/: daily-alerts.yml
app/: __init__.py  main.py
app/api/: __init__.py
app/core/: __init__.py  config.py  db.py  health.py  redaction.py  security.py  time.py
app/extractors/: __init__.py  llm.py  rule.py
app/graphs/: __init__.py  document_ingest_graph.py
app/llm/: __init__.py  openai_compat.py
app/models/: __init__.py  document.py  (+5 more)
docs/: API_EXAMPLES.md  DATA_MODEL.md  DEV_GUIDE.md  INCONSISTENCIES.md  KNOWN_WARNINGS.md  PORTFOLIO_ONEPAGER.md  PROJECT_OVERVIEW.md  RELEASE_GATE.md  SECURITY_PRIVACY.md  SYSTEM_ARCHITECTURE.md
handoff/: CURRENT_CAPABILITIES.md  DEMO_AND_SMOKE.md  ENV_KEYS.md  HANDOFF_INDEX.md  INCONSISTENCIES.md  NEXT_STEPS_PRODUCTION.md
outputs/: demo_result.json
scripts/: demo.sh  run_real_vision_e2e.sh
tasks/: prd-document-processing-ocr-llm-jobs.md  prd-frontend-web-ui.md  prd-ops-free-paas-deployment-and-scheduler.md  tasks-prd-document-processing-ocr-llm-jobs.md  tasks-prd-frontend-web-ui.md  tasks-prd-ops-free-paas-deployment-and-scheduler.md
tests/: conftest.py  test_auth.py  test_cron.py  test_documents.py  test_health.py  test_notification_service.py  test_notification_settings.py  test_ocr_parser.py  test_products.py  test_redaction.py  test_redaction_middleware.py  test_telegram_account.py
web/: index.html  login.html  product.html  products.html  settings.html  shared.js  styles.css  telegram.html  upload.html
(+28 files in other folders)
